// Autogenerated with StateSmith 0.22.2+0c32be37bf4d4fee5499780a5ef37a7996c192f9.
// Algorithm: Balanced2. See https://github.com/StateSmith/StateSmith/wiki/Algorithms

#nullable enable

namespace FinancialTracker.StateMachines;

// Generated state machine
public partial class SyncServer
{
    public enum EventId
    {
        CLOSESERVER = 0,
        CONNECTIONACCEPTED = 1,
        CONNECTIONREJECTED = 2,
        DISCONNECTED = 3,
        GOTCONNECTION = 4,
        SENDREQUEST = 5,
        STARTSERVER = 6,
    }

    public const int EventIdCount = 7;

    public enum StateId
    {
        ROOT = 0,
        IDLE = 1,
        OPEN = 2,
        CONNECTED = 3,
        CONNECTEDIDLE = 4,
        SENDING = 5,
        CONNECTIONREQUESTED = 6,
        OPENIDLE = 7,
    }

    public const int StateIdCount = 8;

    // Subtree meta data generation can be disabled in settings.
    // Details: https://github.com/StateSmith/StateSmith/issues/538
    public const int ROOT_SubtreeEndId = 7;  // State 'SyncServer' subtree extends from itself (id: 0) to state 'OpenIdle' (id: 7)
    public const int IDLE_SubtreeEndId = 1;  // State 'Idle' subtree extends from itself (id: 1) to state 'Idle' (id: 1)
    public const int OPEN_SubtreeEndId = 7;  // State 'Open' subtree extends from itself (id: 2) to state 'OpenIdle' (id: 7)
    public const int CONNECTED_SubtreeEndId = 5;  // State 'Connected' subtree extends from itself (id: 3) to state 'Sending' (id: 5)
    public const int CONNECTEDIDLE_SubtreeEndId = 4;  // State 'ConnectedIdle' subtree extends from itself (id: 4) to state 'ConnectedIdle' (id: 4)
    public const int SENDING_SubtreeEndId = 5;  // State 'Sending' subtree extends from itself (id: 5) to state 'Sending' (id: 5)
    public const int CONNECTIONREQUESTED_SubtreeEndId = 6;  // State 'ConnectionRequested' subtree extends from itself (id: 6) to state 'ConnectionRequested' (id: 6)
    public const int OPENIDLE_SubtreeEndId = 7;  // State 'OpenIdle' subtree extends from itself (id: 7) to state 'OpenIdle' (id: 7)

    // Used internally by state machine. Feel free to inspect, but don't modify.
    public StateId stateId;

    // State machine constructor. Must be called before start or dispatch event functions. Not thread safe.
    public SyncServer()
    {
    }

    // Starts the state machine. Must be called before dispatching events. Not thread safe.
    public void Start()
    {
        ROOT_enter();
        // ROOT behavior
        // uml: TransitionTo(ROOT.<InitialState>)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ROOT.<InitialState>`.
            // ROOT.<InitialState> is a pseudo state and cannot have an `enter` trigger.

            // ROOT.<InitialState> behavior
            // uml: TransitionTo(Idle)
            {
                // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `Idle`.
                IDLE_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for ROOT.<InitialState>
        } // end of behavior for ROOT
    }

    // Dispatches an event to the state machine. Not thread safe.
    // Note! This function assumes that the `eventId` parameter is valid.
    public void DispatchEvent(EventId eventId)
    {
        switch (this.stateId)
        {
            // STATE: SyncServer
            case StateId.ROOT:
                // No events handled by this state (or its ancestors).
                break;

            // STATE: Idle
            case StateId.IDLE:
                switch (eventId)
                {
                    case EventId.STARTSERVER: IDLE_startserver(); break;
                }
                break;

            // STATE: Open
            case StateId.OPEN:
                switch (eventId)
                {
                    case EventId.CLOSESERVER: OPEN_closeserver(); break;
                }
                break;

            // STATE: Connected
            case StateId.CONNECTED:
                switch (eventId)
                {
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break;
                    case EventId.CLOSESERVER: OPEN_closeserver(); break; // First ancestor handler for this event
                }
                break;

            // STATE: ConnectedIdle
            case StateId.CONNECTEDIDLE:
                switch (eventId)
                {
                    case EventId.SENDREQUEST: CONNECTEDIDLE_sendrequest(); break;
                    case EventId.CLOSESERVER: OPEN_closeserver(); break; // First ancestor handler for this event
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break; // First ancestor handler for this event
                }
                break;

            // STATE: Sending
            case StateId.SENDING:
                switch (eventId)
                {
                    case EventId.CLOSESERVER: OPEN_closeserver(); break; // First ancestor handler for this event
                    case EventId.DISCONNECTED: CONNECTED_disconnected(); break; // First ancestor handler for this event
                }
                break;

            // STATE: ConnectionRequested
            case StateId.CONNECTIONREQUESTED:
                switch (eventId)
                {
                    case EventId.CONNECTIONACCEPTED: CONNECTIONREQUESTED_connectionaccepted(); break;
                    case EventId.CONNECTIONREJECTED: CONNECTIONREQUESTED_connectionrejected(); break;
                    case EventId.CLOSESERVER: OPEN_closeserver(); break; // First ancestor handler for this event
                }
                break;

            // STATE: OpenIdle
            case StateId.OPENIDLE:
                switch (eventId)
                {
                    case EventId.GOTCONNECTION: OPENIDLE_gotconnection(); break;
                    case EventId.CLOSESERVER: OPEN_closeserver(); break; // First ancestor handler for this event
                }
                break;
        }

    }

    // This function is used when StateSmith doesn't know what the active leaf state is at
    // compile time due to sub states or when multiple states need to be exited.
    private void ExitUpToStateHandler(StateId desiredState)
    {
        while (this.stateId != desiredState)
        {
            switch (this.stateId)
            {
                case StateId.IDLE: IDLE_exit(); break;

                case StateId.OPEN: OPEN_exit(); break;

                case StateId.CONNECTED: CONNECTED_exit(); break;

                case StateId.CONNECTEDIDLE: CONNECTEDIDLE_exit(); break;

                case StateId.SENDING: SENDING_exit(); break;

                case StateId.CONNECTIONREQUESTED: CONNECTIONREQUESTED_exit(); break;

                case StateId.OPENIDLE: OPENIDLE_exit(); break;

                default: return;  // Just to be safe. Prevents infinite loop if state ID memory is somehow corrupted.
            }
        }
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state ROOT
    ////////////////////////////////////////////////////////////////////////////////

    private void ROOT_enter()
    {
        this.stateId = StateId.ROOT;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state IDLE
    ////////////////////////////////////////////////////////////////////////////////

    private void IDLE_enter()
    {
        this.stateId = StateId.IDLE;
    }

    private void IDLE_exit()
    {
        this.stateId = StateId.ROOT;
    }

    private void IDLE_startserver()
    {
        // Idle behavior
        // uml: StartServer TransitionTo(Open)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            IDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Open`.
            OPEN_enter();

            // Open.<InitialState> behavior
            // uml: TransitionTo(OpenIdle)
            {
                // Step 1: Exit states until we reach `Open` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `OpenIdle`.
                OPENIDLE_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for Open.<InitialState>
        } // end of behavior for Idle

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state OPEN
    ////////////////////////////////////////////////////////////////////////////////

    private void OPEN_enter()
    {
        this.stateId = StateId.OPEN;

        // Open behavior
        // uml: enter / { OnOpenEnter(); }
        {
            // Step 1: execute action `OnOpenEnter();`
            OnOpenEnter();
        } // end of behavior for Open

        // Open behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Open
    }

    private void OPEN_exit()
    {
        // Open behavior
        // uml: exit / { OnOpenExit(); }
        {
            // Step 1: execute action `OnOpenExit();`
            OnOpenExit();
        } // end of behavior for Open

        // Open behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Open

        this.stateId = StateId.ROOT;
    }

    private void OPEN_closeserver()
    {
        // Open behavior
        // uml: CloseServer TransitionTo(Idle)
        {
            // Step 1: Exit states until we reach `ROOT` state (Least Common Ancestor for transition).
            ExitUpToStateHandler(StateId.ROOT);

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Idle`.
            IDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Open

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTED
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTED_enter()
    {
        this.stateId = StateId.CONNECTED;
    }

    private void CONNECTED_exit()
    {
        // Connected behavior
        // uml: exit / { OnConnectedExit(); }
        {
            // Step 1: execute action `OnConnectedExit();`
            OnConnectedExit();
        } // end of behavior for Connected

        // Connected behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Connected

        this.stateId = StateId.OPEN;
    }

    private void CONNECTED_disconnected()
    {
        // Connected behavior
        // uml: Disconnected TransitionTo(OpenIdle)
        {
            // Step 1: Exit states until we reach `Open` state (Least Common Ancestor for transition).
            ExitUpToStateHandler(StateId.OPEN);

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `OpenIdle`.
            OPENIDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for Connected

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTEDIDLE
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTEDIDLE_enter()
    {
        this.stateId = StateId.CONNECTEDIDLE;
    }

    private void CONNECTEDIDLE_exit()
    {
        this.stateId = StateId.CONNECTED;
    }

    private void CONNECTEDIDLE_sendrequest()
    {
        // ConnectedIdle behavior
        // uml: SendRequest TransitionTo(Sending)
        {
            // Step 1: Exit states until we reach `Connected` state (Least Common Ancestor for transition).
            CONNECTEDIDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Sending`.
            SENDING_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ConnectedIdle

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state SENDING
    ////////////////////////////////////////////////////////////////////////////////

    private void SENDING_enter()
    {
        this.stateId = StateId.SENDING;

        // Sending behavior
        // uml: enter / { OnSendingEnter(); }
        {
            // Step 1: execute action `OnSendingEnter();`
            OnSendingEnter();
        } // end of behavior for Sending

        // Sending behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for Sending
    }

    private void SENDING_exit()
    {
        // Sending behavior
        // uml: exit / { OnSendingExit(); }
        {
            // Step 1: execute action `OnSendingExit();`
            OnSendingExit();
        } // end of behavior for Sending

        // Sending behavior
        // uml: exit
        {
            // Step 1: execute action ``
        } // end of behavior for Sending

        this.stateId = StateId.CONNECTED;
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state CONNECTIONREQUESTED
    ////////////////////////////////////////////////////////////////////////////////

    private void CONNECTIONREQUESTED_enter()
    {
        this.stateId = StateId.CONNECTIONREQUESTED;
    }

    private void CONNECTIONREQUESTED_exit()
    {
        this.stateId = StateId.OPEN;
    }

    private void CONNECTIONREQUESTED_connectionaccepted()
    {
        // ConnectionRequested behavior
        // uml: ConnectionAccepted TransitionTo(Connected)
        {
            // Step 1: Exit states until we reach `Open` state (Least Common Ancestor for transition).
            CONNECTIONREQUESTED_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `Connected`.
            CONNECTED_enter();

            // Connected.<InitialState> behavior
            // uml: TransitionTo(ConnectedIdle)
            {
                // Step 1: Exit states until we reach `Connected` state (Least Common Ancestor for transition). Already at LCA, no exiting required.

                // Step 2: Transition action: ``.

                // Step 3: Enter/move towards transition target `ConnectedIdle`.
                CONNECTEDIDLE_enter();

                // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
                return;
            } // end of behavior for Connected.<InitialState>
        } // end of behavior for ConnectionRequested

        // No ancestor handles this event.
    }

    private void CONNECTIONREQUESTED_connectionrejected()
    {
        // ConnectionRequested behavior
        // uml: ConnectionRejected / { OnConnectionRejected(); } TransitionTo(OpenIdle)
        {
            // Step 1: Exit states until we reach `Open` state (Least Common Ancestor for transition).
            CONNECTIONREQUESTED_exit();

            // Step 2: Transition action: `OnConnectionRejected();`.
            OnConnectionRejected();

            // Step 3: Enter/move towards transition target `OpenIdle`.
            OPENIDLE_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for ConnectionRequested

        // No ancestor handles this event.
    }


    ////////////////////////////////////////////////////////////////////////////////
    // event handlers for state OPENIDLE
    ////////////////////////////////////////////////////////////////////////////////

    private void OPENIDLE_enter()
    {
        this.stateId = StateId.OPENIDLE;

        // OpenIdle behavior
        // uml: enter / { OnOpenIdleEnter(); }
        {
            // Step 1: execute action `OnOpenIdleEnter();`
            OnOpenIdleEnter();
        } // end of behavior for OpenIdle

        // OpenIdle behavior
        // uml: enter
        {
            // Step 1: execute action ``
        } // end of behavior for OpenIdle
    }

    private void OPENIDLE_exit()
    {
        this.stateId = StateId.OPEN;
    }

    private void OPENIDLE_gotconnection()
    {
        // OpenIdle behavior
        // uml: GotConnection TransitionTo(ConnectionRequested)
        {
            // Step 1: Exit states until we reach `Open` state (Least Common Ancestor for transition).
            OPENIDLE_exit();

            // Step 2: Transition action: ``.

            // Step 3: Enter/move towards transition target `ConnectionRequested`.
            CONNECTIONREQUESTED_enter();

            // Step 4: complete transition. Ends event dispatch. No other behaviors are checked.
            return;
        } // end of behavior for OpenIdle

        // No ancestor handles this event.
    }

    // Thread safe. This function can be disabled with `outputStateIdToStringFunction` setting.
    public static string StateIdToString(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return "ROOT";
            case StateId.IDLE: return "IDLE";
            case StateId.OPEN: return "OPEN";
            case StateId.CONNECTED: return "CONNECTED";
            case StateId.CONNECTEDIDLE: return "CONNECTEDIDLE";
            case StateId.SENDING: return "SENDING";
            case StateId.CONNECTIONREQUESTED: return "CONNECTIONREQUESTED";
            case StateId.OPENIDLE: return "OPENIDLE";
            default: return "?";
        }
    }

    // Thread safe. This function can be disabled with `outputEventIdToStringFunction` setting.
    public static string EventIdToString(EventId id)
    {
        switch (id)
        {
            case EventId.CLOSESERVER: return "CLOSESERVER";
            case EventId.CONNECTIONACCEPTED: return "CONNECTIONACCEPTED";
            case EventId.CONNECTIONREJECTED: return "CONNECTIONREJECTED";
            case EventId.DISCONNECTED: return "DISCONNECTED";
            case EventId.GOTCONNECTION: return "GOTCONNECTION";
            case EventId.SENDREQUEST: return "SENDREQUEST";
            case EventId.STARTSERVER: return "STARTSERVER";
            default: return "?";
        }
    }

    // Returns the parent state for a given state. Returns ROOT if input has no parent.
    // Thread safe. This function can be disabled with `outputGetParentIdFunction` setting.
    public static StateId GetParentId(StateId id)
    {
        switch (id)
        {
            case StateId.ROOT: return StateId.ROOT;
            case StateId.IDLE: return StateId.ROOT;
            case StateId.OPEN: return StateId.ROOT;
            case StateId.CONNECTED: return StateId.OPEN;
            case StateId.CONNECTEDIDLE: return StateId.CONNECTED;
            case StateId.SENDING: return StateId.CONNECTED;
            case StateId.CONNECTIONREQUESTED: return StateId.OPEN;
            case StateId.OPENIDLE: return StateId.OPEN;
            default: return StateId.ROOT;
        }
    }
}
