@startuml SyncServer

state Idle
state Open {
    Open: enter / 
    Open: exit / 

    state OpenIdle {
        OpenIdle: enter / 
    }
    state ConnectionRequested
    state Connected {
        Connected: exit / 

        state ConnectedIdle
        state Sending {
            Sending: enter / 
            Sending: exit / 
        }

        [*] -> ConnectedIdle

        ConnectedIdle -> Sending: SendRequest
    }

    [*] --> OpenIdle

    Open -left-> Idle: CloseServer

    OpenIdle -> ConnectionRequested: GotConnection

    ConnectionRequested --> Connected: ConnectionAccepted
    ConnectionRequested -left-> OpenIdle: ConnectionRejected / OnConnectionRejected();

    Connected -up-> OpenIdle: Disconnected
}


[*] --> Idle

Idle -> Open: StartServer

@enduml